# Quark

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  out.c
app/: main.c  main.cpp
core/: lexer.c  lexer.cpp  parcer.cpp  parser.cpp  semantic.cpp  symbol_table.cpp  token.cpp
include/: lexer.h  str.h  token.h  vector.h  wordlist.h
include/quark/: ast.h  ast_visitor.h  colors.h  compiler_context.h  lexer.h  logger.h  parcer.h  parser.h  semantic.h  symbol_table.h  token.h  type_context.h  visitor.h
include/quark/codegen/: ccodegen.h  codegen.h  ir.h  ir_gen.h
include/utils/: logger.h  options.h  string.h
src/: lexer.c  main.c  main.cpp  string.c  token.c  vector.c  wordlist.c
src/core/: ir_dump.cpp  ir_gen.cpp  lexer.cpp  parser.cpp  semantic.cpp  symbol_table.cpp  token.cpp
src/semantic/: semantic.cpp
src/utils/: logger.cpp
tests/: test.qk
